#62 Bug: Layout handles were visible in the footer of each page

--- a/skin/frontend/base/default/css/lemike/devmode/toolbox.css
+++ b/skin/frontend/base/default/css/lemike/devmode/toolbox.css
@@ -36,3 +36,8 @@
     display: inline-block;
     width: 100%;
 }
+
+.ld_dialog {
+    display: none;
+    visibility: hidden;
+}
